# cppRust

./: CMakeLists.txt  Main.qml  main.cpp
QmlRustItem/: CMakeLists.txt  qmlrustitem.cpp  qmlrustitem.h
QmlRustItem/rustlib/: Cargo.toml
QmlRustItem/rustlib/src/: lib.rs
